fixed css scrollbar, setup slot for SelectWithSearch

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 body {
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  /* background-color: white; */
 }
 
 #root, .App {
