--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -14,6 +14,7 @@
     border-radius: 10px;
     border: 2px solid rgb(34 211 238);
     color: rgb(17 24 39);
+    outline: none;
 
     &__content {
       flex-grow: 1;
@@ -47,15 +48,47 @@
   top: 0;
   left: 0;
 
-  background-color: rgb(240 253 250);
 
   &__header {
     height: min-content;
+    width: 100%;
+
+    background-color: rgb(240 253 250);
+    padding: 0px 16px;
+
+    position: sticky;
+    top: 0;
   }
 
   &__list {
+    width: calc(100%);
     flex-grow: 1;
+
+    background-color: rgb(240 253 250);
     padding: 4px 0;
   }
+
+  /* width */
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: #888;
+  }
+
+  /* Handle on hover */
+  &::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
 }
 
